--- a/src/app/pages/stage-listt/stage-listt.component.html
+++ b/src/app/pages/stage-listt/stage-listt.component.html
@@ -9,30 +9,22 @@
       <div class="card">
         <div class="card-body border-bottom">
           <div class="d-flex align-items-center">
-            <h5 class="mb-0 card-title flex-grow-1"> List</h5>
+            <h5 class="mb-0 card-title flex-grow-1"> List Etudiant et Encadrant</h5>
             <div class="flex-shrink-0 d-flex gap-1">
-              <a href="javascript:void(0);" class="btn btn-primary" >Liste</a>
-              <a href="javascript:void(0);" class="btn btn-light"><i class="mdi mdi-refresh"></i></a>
-              <div class="dropdown d-inline-block" dropdown>
-                <button type="menu" class="btn btn-success" id="*dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" dropdownToggle><i class="mdi mdi-dots-vertical"></i></button>
-              
-              </div>
+            
+           
             </div>
           </div>
         </div>
         <div class="card-body border-bottom">
           <div class="row g-3">
-            <div class="col-xxl-4 col-lg-6">
-              <input type="search" class="form-control" id="searchInput" placeholder="Search for ..." [(ngModel)]="studentId" (input)="filterStages()">
-            </div>
+          
           
            
             <div class="col-xxl-2 col-lg-4">
            
             </div>
-            <div class="col-xxl-2 col-lg-4">
-              <button type="button" class="btn btn-soft-secondary w-100"><i class="mdi mdi-filter-outline align-middle"></i> Filter</button>
-            </div>
+          
           </div>
         </div>
         <div class="card-body">
