--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -33,12 +33,14 @@
                                 </div>
 
                                 <div class="mt-4">
-                                    <div class="alert alert-success text-center mb-4" role="alert">
+                                    <div class="alert alert-success text-center mb-4" role="alert" *ngIf="error==''">
                                         Enter your Email and instructions will be sent to you!
                                     </div>
                                     <form [formGroup]="resetForm" (ngSubmit)="onSubmit()"
                                     >
-                                    <alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</alert>
+                                    <div class="alert alert-danger text-center mb-4" role="alert" *ngIf="error!=''">
+                                        Enter your Email and instructions will be sent to you!
+                                    </div>
                                         <div class="mb-3">
                                             <label for="useremail">Email</label>
                                             <input type="email" formControlName="email" 
