--- a/src/app/pages/user/profile/edit-profile-student/edit-profile-student.component.html
+++ b/src/app/pages/user/profile/edit-profile-student/edit-profile-student.component.html
@@ -20,7 +20,7 @@
                                 </div>
                               </div>
                             </label>
-                            <input class="form-control d-none" value="" id="member-image-input" type="file" accept="image/png, image/gif, image/jpeg" (change)="fileChange($event)">
+                            <input class="form-control d-none"  id="member-image-input" formControlName="userImage" type="file" accept="image/png, image/gif, image/jpeg" (change)="fileChange($event)">
                           </div>
                           <div class="avatar-lg">
                             <div class="avatar-title bg-light rounded-circle">
