--- a/src/app/pages/user/list-servicestage/list-servicestage.component.html
+++ b/src/app/pages/user/list-servicestage/list-servicestage.component.html
@@ -27,7 +27,12 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let data of lists;let i = index;">
+                  <tr *ngFor="let data of lists  | paginate : {
+                    id:'server',
+                   itemsPerPage: pageSize,
+                   currentPage: currentPage,
+                   totalItems: totalCount
+                 };let i = index;">
                     <th scope="row">{{i}}</th>
                     <td>{{data.firstName}} {{data.lastName}} </td>
                     <td>{{data.login}}</td>
@@ -49,6 +54,19 @@
                   </tr>
                 </tbody>
               </table>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <ul class="pagination pagination-rounded justify-content-center mt-4">
+                  <pagination-controls 
+                  previousLabel="Prev"
+                  nextLabel="Next"
+                  [responsive]="true"
+                  (pageChange)="pageChanged($event)" id="server"></pagination-controls>
+                 <!-- <pagination [totalItems]="(total | async)!" [(ngModel)]="service.page">
+                  </pagination>-->
+                </ul>
+              </div>
             </div>
             <!--end row-->
           </div>
