--- a/src/app/pages/user/list-students/list-students.component.html
+++ b/src/app/pages/user/list-students/list-students.component.html
@@ -32,7 +32,12 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let data of students;let i = index;">
+                  <tr *ngFor="let data of students | paginate : {
+                     id:'server',
+                    itemsPerPage: pageSize,
+                    currentPage: currentPage,
+                    totalItems: totalCount
+                  } ;let i = index;">
                     <td>
                       <div class="avatar-xs" *ngIf="!data.pic">
                         <span class="avatar-title rounded-circle">
@@ -82,6 +87,11 @@
             <div class="row">
               <div class="col-lg-12">
                 <ul class="pagination pagination-rounded justify-content-center mt-4">
+                  <pagination-controls 
+                  previousLabel="Prev"
+                  nextLabel="Next"
+                  [responsive]="true"
+                  (pageChange)="pageChanged($event)" id="server"></pagination-controls>
                  <!-- <pagination [totalItems]="(total | async)!" [(ngModel)]="service.page">
                   </pagination>-->
                 </ul>
