--- a/src/app/pages/forum/addquestion/addquestion.component.html
+++ b/src/app/pages/forum/addquestion/addquestion.component.html
@@ -61,7 +61,7 @@
                 </mat-autocomplete>
               </div>
             </div> 
-            <button type="submit" class="btn btn-danger mb-3 col-1 " style="margin-left: 20px;" [disabled]="formQuestion.invalid" (click)="onSubmit()">Submit</button>
+            <button type="submit" class="btn btn-danger mb-3 col-1 " style="margin-left: 20px;" [disabled]="formQuestion.invalid" (click)="onSubmit()">Ajouter</button>
           </div>
           
         </div>
